/*
 * Copyright (c) 2025 Alexander Yaburov
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 * http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

package me.impa.knockonports.constants

const val TAG_APP_SCREEN = "APP_SCREEN"
const val TAG_SEQUENCE_ITEM = "SEQUENCE_ITEM"
const val TAG_SEQUENCE_BASIC_TAB = "SEQUENCE_TAB"
const val TAG_SEQUENCE_ADVANCED_TAB = "CONFIG_TAB"
const val TAG_EDIT_LOCAL_PORT = "EDIT_TTL"
const val TAG_EDIT_HOST = "EDIT_HOST"
const val TAG_BACK_BUTTON = "BACK_BUTTON"
const val TAG_MAIN_DOTS_BUTTON = "MAIN_DOTS_BUTTON"
const val TAG_SETTINGS_MENU_ITEM = "SETTINGS_MENU_ITEM"
const val TAG_SEQUENCE_DOTS_BUTTON = "SEQUENCE_DOTS_BUTTON"
const val TAG_AUTOMATE_MENU_ITEM = "AUTOMATE_MENU_ITEM"
const val TAG_CLOSE_BUTTON = "CLOSE_BUTTON"
const val TAG_EMPTY = ""